auth/base/keycloak-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels: 
    istio-injection: enabled
---
