auth/base/keycloak-istio-network.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: keycloak
  labels:
    app.kubernetes.io/name: keycloak-gateway
    app.kubernetes.io/instance: keycloak-gateway
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: nautible
    app.kubernetes.io/managed-by: manual
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: keycloak-vs
  namespace: keycloak
  labels:
    app.kubernetes.io/name: keycloak-vs
    app.kubernetes.io/instance: keycloak-vs
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: virtualservice
    app.kubernetes.io/part-of: nautible
    app.kubernetes.io/managed-by: manual
spec:
  hosts:
  - "*"
  gateways:
  - keycloak-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1.0/nautible-auth/auth
    rewrite:
      uri: "/auth"
    route:
    - destination:
        host: keycloak.keycloak.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/v1.0/nautible-app-ms/product
    rewrite:
      uri: "/products"
    route:
    - destination:
        host: nautible-app-ms-product.nautible-app-ms.svc.cluster.local
        port:
            number: 8080
  - match:
    - uri:
        prefix: /api/v1.0/nautible-app-ms/order
    rewrite:
      uri: "/order"
    route:
    - destination:
        host: nautible-app-ms-order.nautible-app-ms.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/v1.0/nautible-app-ms/cart
    rewrite:
      uri: "/cart"
    route:
    - destination:
        host: nautible-app-ms-order.nautible-app-ms.svc.cluster.local
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/v1.0/nautible-app-ms/customer
    rewrite:
      uri: "/customer"
    route:
    - destination:
        host: nautible-app-ms-customer.nautible-app-ms.svc.cluster.local
        port:
          number: 8080
